--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "my-app",
+  "name": "component_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "jquery": "^3.3.1",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
